--- a/harvestchain-frontend/src/styles/globals.css
+++ b/harvestchain-frontend/src/styles/globals.css
@@ -3,25 +3,13 @@
 @tailwind utilities;
 
 :root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-  }
+  --bg-color: rgb(97, 58, 58);
+  --asparagus: rgb(96, 153, 62);
+  --yellow-green: rgb(161, 228, 77);
+  --screamin-green: rgb(119, 255, 148);
+  --aquamarine: rgb(122, 253, 214);
 }
 
 body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+  background-color: var(--bg-color);
 }
