--- a/harvestchain-frontend/src/styles/globals.css
+++ b/harvestchain-frontend/src/styles/globals.css
@@ -2,14 +2,7 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --bg-color: rgb(97, 58, 58);
-  --asparagus: rgb(96, 153, 62);
-  --yellow-green: rgb(161, 228, 77);
-  --screamin-green: rgb(119, 255, 148);
-  --aquamarine: rgb(122, 253, 214);
-}
-
 body {
-  background-color: var(--bg-color);
+  background-color: #613a3a;
+  color: #ebebeb;
 }
